<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D000"
            android:orientation="vertical"
            android:padding="5dp" >


            <TextView
                android:id="@+id/messageViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desde"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioGroup
                android:id="@+id/RadioGroupOrigen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/posactual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/pos_actual"
                    android:textColor="#FFFF" />

                <RadioButton
                    android:id="@+id/RadioButton01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mi_casa"
                    android:textColor="#FFFF" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hasta"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioGroup
                android:id="@+id/RadioGroupSucursales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/sucursal"
                    android:textColor="#FFFF" />

                <RadioButton
                    android:id="@+id/RadioButton02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sucursal"
                    android:textColor="#FFFF" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sucursal"
                    android:textColor="#FFFF" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/como"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioGroup
                android:id="@+id/RadioGroupModo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/RadioButton04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/modo1"
                    android:textColor="#FFFF" />

                <RadioButton
                    android:id="@+id/RadioButton03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modo2"
                    android:textColor="#FFFF" />
            </RadioGroup>
            
        <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_marginTop="20dip"
        android:background="@layout/header_gradient" >

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCalculateRoute"
                android:text="@string/cal_ruta"
                android:textColor="@color/textLabel" />
   		 </LinearLayout>

            

        </LinearLayout>

</ScrollView>