<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    
    <LinearLayout
    
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:background="#000000"
        android:orientation="vertical"         >
         <ImageView
            android:id="@+id/imagenPaciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            android:maxWidth="50dp"
            android:onClick="seleccionarImagen"
            android:src="@drawable/ic_launcher" />

             <TextView
                android:id="@+id/messageViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:ems="10"
                android:text="@string/nombre_completo" />
            <EditText
                android:id="@+id/nombre_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"                
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none|textPersonName" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:ems="10"
                android:text="@string/login_clave" />
            <EditText
                android:id="@+id/clave_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"                
                android:ems="10"
                android:inputType="none|textPassword" >
            </EditText>
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:ems="10"
                android:text="@string/dni" />
            <EditText
                android:id="@+id/dni_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                      android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="number" >
            </EditText>
            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:ems="10"
                android:text="@string/nacionalidad" />
            <EditText
                android:id="@+id/nacionalidad_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="text" >
            </EditText>
            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:ems="10"
                android:text="@string/sexo" />
            <EditText
                android:id="@+id/sexo_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="text" >
            </EditText>
            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:ems="10"
                android:text="@string/fecha_nacimiento" />
		     <EditText
                android:id="@+id/fecha_nacimmiento_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="text" >
            </EditText>

            <TextView
                android:id="@+id/textoMensajes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:ems="10"
                android:text="@string/afiliado" />

            <EditText
                android:id="@+id/afiliado_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="number" >
            </EditText>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:ems="10"
                android:text="@string/obraSocial" />
            <EditText
                android:id="@+id/obrasocial_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="text" >
            </EditText>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:ems="10"
                android:text="@string/email" />
               <EditText
                android:id="@+id/email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:ems="10"
                android:inputType="textEmailAddress" >
            </EditText>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:ems="10"
                android:text="@string/telefono" />
            <EditText
                android:id="@+id/telefono_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:ems="10"
                android:inputType="phone" >
            </EditText>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:ems="10"
                android:text="@string/domicilio" />
            <EditText
                android:id="@+id/direccion_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:ems="10"
                android:inputType="textPostalAddress" >
            </EditText>
            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:ems="10"
                android:text="@string/localidad" />
            <EditText
                android:id="@+id/localidad_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:ems="10"
                android:inputType="text" >
            </EditText>
            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:ems="10"
                android:text="@string/provincia" />
            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:entries="@array/prov_arrays"
                android:prompt="@string/provincia_prompt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@layout/header_gradient" >

            <Button
                android:id="@+id/buttonModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modificar" />
        
    </LinearLayout>
    </LinearLayout>
</ScrollView>